# agent1

./: .gitignore  README.md  pyproject.toml
agent1/: Shreyas_Krishnareddy_Resume.txt  __init__.py  ai.py  browser.py  cli.py  config.py  database.py  discover.py  email_client.py  filter.py
agent1/apply/: dashboard.py  launcher.py
agent1/wizard/: init.py
